# board_game_parser

./: Cargo.toml  README.md  input.txt  makefile  output.json
src/: grammar.pest  lib.rs  main.rs
tests/: board_game_parser_tests.rs
