[package]
name = "board_game_parser"
version = "0.1.0"
edition = "2021"
description = "A Rust-based parser for board game data, designed for efficient data extraction and transformation."
license = "MIT"
authors = ["Maksym Karpinskyi <karpinskyimaksym@gmail.com>"]

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"